--- a/doc/spi/random.adoc
+++ b/doc/spi/random.adoc
@@ -8,7 +8,8 @@ DRBGs typically use either a hash or cipher function on top of non-deterministic
 
 == Deterministic Random Bit Generator
 
-O(1) Cryptography uses a DRBG based on https://doi.org/10.6028/NIST.SP.800-90Ar1[NIST SP 800-90A rev1] CTR_DRBG with the ChaCha20 cipher and perfect forward secrecy using ratcheting and automatic reseeding.
+O(1) Cryptography provides DRBGs based on https://doi.org/10.6028/NIST.SP.800-90Ar1[NIST SP 800-90A rev1] with perfect forward secrecy using ratcheting and automatic reseeding.
+The primary implementation is based on BLAKE3 comparable to the HMAC_CTR strategy.
 Random data are generated for various cryptographic uses via thread-safe DRBGs through the following SPI.
 
 .C SPI
